--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "start": "parcel public/index.html --port 3000",
-    "build": "parcel build public/index.html",
+    "build": "parcel build public/index.html --dist-dir dist --public-url ./",
+    "deploy": "npm run build && cp -r dist/ docs/",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -13,6 +14,7 @@
     "format": "prettier --write .",
     "prepare": "husky install"
   },
+  "homepage": "https://pangeafate.github.io/AnalyticsPhilosophy/",
   "keywords": [],
   "author": "",
   "license": "ISC",
